# bintrade_egui

./: Cargo.toml  README.md  Settings.toml  TODO
src/: binance.rs  client.rs  conn.rs  data.rs  gui.rs  lib.rs  trade.rs
