[package]
name = "bintrade_egui"
version = "0.1.444"
edition = "2024"
authors = ["DB <dd555@protonmail.com>"]
description = "GUI binance trade program using egui. Do live trading, historic data and simulate trading, plot historic data"
license= "MIT"
include =["/src","LICENSE.md", "Settings.toml", "Cargo.toml"]
exclude =["Cargo.lock"]

[profile.release]
strip=true 
lto = true 
opt-level = 2 
codegen-units = 1 

[features]
default=[]
yfinance=["dep:yahoo_finance_api", "dep:yfinance-rs"]

[dependencies]
yahoo_finance_api ={ version="4.1.0", optional=true}
yfinance-rs = { version="0.1.3", optional=true}

chrono = { workspace=true }
bincode = { workspace=true }
rust_decimal = { workspace=true }

tokio ={workspace=true}
tracing ={workspace=true}
tracing-subscriber ={workspace=true}
futures ={workspace=true}

tokio-util = "0.7.16"

anyhow ={ version = "1.0.102" }

eframe = {workspace=true} 
egui = {workspace=true}
winit = {workspace=true}
egui_extras = {workspace=true}
egui_plot_bintrade = {workspace=true} 
egui_tiles = {workspace=true} 


serde = {workspace=true}
serde_json ={workspace=true} 

strum = {workspace=true}
strum_macros ={workspace=true}

linya = {workspace=true}

sqlx = {workspace=true}
binance-rs-async = { workspace=true}

websockets = "0.3.0"
derive-debug = "0.1.2"
num = "0.4.3"
reqwest = { workspace=true}
magic-crypt = "4.0.1"
